--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <main>
     <div class="container">
 
-      <h2>Inserisci i numeri</h2>
+      <h2>Memorizza i numeri</h2>
 
       <div class="cells-container">
 
@@ -63,6 +63,8 @@
       <div id="check-num" class="check">
         <span class="box btn">Check</span>
       </div>
+
+      <span class="message"></span>
 
     </div>
   </main>
